--- a/Rami.project
+++ b/Rami.project
@@ -9,11 +9,11 @@
   <Dependencies/>
   <VirtualDirectory Name="src">
     <File Name="main.cpp"/>
+    <File Name="CardType.cpp"/>
+    <File Name="CardStack.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="include">
-    <File Name="CardStack.cpp"/>
     <File Name="CardStack.h"/>
-    <File Name="CardType.cpp"/>
     <File Name="CommonVars.h"/>
     <File Name="EventReceiver.h"/>
     <File Name="Card.h"/>
@@ -30,6 +30,58 @@
       </Linker>
       <ResourceCompiler Options=""/>
     </GlobalSettings>
+    <Configuration Name="Debug_Lin" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
+      <Compiler Options="-std=c++14;-Wall;-g -Wall -fpermissive" C_Options="" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
+        <IncludePath Value="C:/irrlicht-1.8.4/include"/>
+        <IncludePath Value="/usr/include/irrlicht/"/>
+        <Preprocessor Value="_DEBUG"/>
+        <Preprocessor Value="_CONSOLE"/>
+      </Compiler>
+      <Linker Options="-O0" Required="yes">
+        <LibraryPath Value="C:\irrlicht-1.8.4\lib\Win32-gcc"/>
+        <LibraryPath Value="..\..\lib\Win32-gcc"/>
+        <Library Value="Irrlicht"/>
+      </Linker>
+      <ResourceCompiler Options="" Required="no"/>
+      <General OutputFile="Rami" IntermediateDirectory="./Debug/" Command="./Rami.exe" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="./" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <BuildSystem Name="Default"/>
+      <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
+        <![CDATA[VS_Configuration=Debug
+VS_IntDir=./Debug/
+VS_OutDir=.
+VS_Platform=Win32
+VS_ProjectDir=/home/tupac/Rami/
+VS_ProjectName=Rami
+VS_SolutionDir=/home/tupac/Rami/]]>
+      </Environment>
+      <Debugger IsRemote="no" RemoteHostName="" RemoteHostPort="" DebuggerPath="" IsExtended="no">
+        <DebuggerSearchPaths/>
+        <PostConnectCommands/>
+        <StartupCommands/>
+      </Debugger>
+      <PreBuild/>
+      <PostBuild/>
+      <CustomBuild Enabled="no">
+        <RebuildCommand/>
+        <CleanCommand/>
+        <BuildCommand/>
+        <PreprocessFileCommand/>
+        <SingleFileCommand/>
+        <MakefileGenerationCommand/>
+        <ThirdPartyToolName/>
+        <WorkingDirectory/>
+      </CustomBuild>
+      <AdditionalRules>
+        <CustomPostBuild/>
+        <CustomPreBuild/>
+      </AdditionalRules>
+      <Completion EnableCpp11="no" EnableCpp14="no">
+        <ClangCmpFlagsC/>
+        <ClangCmpFlags/>
+        <ClangPP/>
+        <SearchPaths/>
+      </Completion>
+    </Configuration>
     <Configuration Name="Debug_Win32" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
       <Compiler Options="-std=c++14;-Wall;-g -Wall -fpermissive" C_Options="" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
         <IncludePath Value="C:/irrlicht-1.8.4/include"/>
